--- a/_tweets-md/2021/2021-02-01-tweets.md
+++ b/_tweets-md/2021/2021-02-01-tweets.md
@@ -1,7 +1,9 @@
----    
+---  
+title: "Social Media - Febuary"
 date: "2021-02-28"
 time:  23:59:59 +0000
 ---
+
 
 > RT @sprucesystems: Announcing ShibeID: Announcing a new DID-Method for $DOGE - enabling decentralized identity on #dogecoin [https://t.co/ea…](https://t.co/ea…)
 
