--- a/_tweets-md/2021/2021-11-01-tweets.md
+++ b/_tweets-md/2021/2021-11-01-tweets.md
@@ -1,6 +1,12 @@
+---  
+title: "Social Media - November"
+date: "2021-11-30"
+time:  23:59:59 +0000
+---
+
 > RT @namcios: (TechCrunch) - African cross-border payments company @chippercashapp raised $150M in a round led by FTX, gets $2 billion valua…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 02 20:43:26 +0000 2021](https://twitter.com/ChristopherA/status/1455636692770045953)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 02 20:43:26 +0000 2021](https://twitter.com/ChristopherA/status/1455636692770045953)
 
 ----
 
@@ -8,7 +14,7 @@ Replying to [@ODELL, @Hodl_GoGo and @MuunWallet](https://twitter.com/ODELL/statu
 
 > Too many single points of failure (I think I count 5). Resilience is as important as security. All could be addressed, but likely not while keeping compatibility with old system. We designed a 2 of 3 for another company where we looked at 64 different points of failure.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 02 21:09:41 +0000 2021](https://twitter.com/ChristopherA/status/1455643300266840065)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 02 21:09:41 +0000 2021](https://twitter.com/ChristopherA/status/1455643300266840065)
 
 ----
 
@@ -16,7 +22,7 @@ Replying to [@MuunWallet](https://twitter.com/MuunWallet/status/1452878083711766
 
 > [https://twitter.com/christophera/status/1455643300266840065](https://twitter.com/christophera/status/1455643300266840065)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 02 21:10:27 +0000 2021](https://twitter.com/ChristopherA/status/1455643491254505473)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 02 21:10:27 +0000 2021](https://twitter.com/ChristopherA/status/1455643491254505473)
 
 ----
 
@@ -24,7 +30,7 @@ Replying to [@Abuez0 and @MuunWallet](https://twitter.com/DarwinLover0/status/14
 
 > [https://twitter.com/christophera/status/1455643300266840065?s=21](https://twitter.com/christophera/status/1455643300266840065?s=21)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 02 21:10:44 +0000 2021](https://twitter.com/ChristopherA/status/1455643564143042562)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 02 21:10:44 +0000 2021](https://twitter.com/ChristopherA/status/1455643564143042562)
 
 ----
 
@@ -32,7 +38,7 @@ Replying to [@Abuez0 and @MuunWallet](https://twitter.com/DarwinLover0/status/14
 >   
 > This project I’m working on with @Ch…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 03 21:56:03 +0000 2021](https://twitter.com/ChristopherA/status/1456017354148630532)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 03 21:56:03 +0000 2021](https://twitter.com/ChristopherA/status/1456017354148630532)
 
 ----
 
@@ -40,13 +46,13 @@ Replying to [@bradmillscan and @namcios](https://twitter.com/bradmillscan/status
 
 > [https://podcasts.apple.com/us/podcast/the-granddaddy-of-dids-did-btcr/id1568335990?i=1000529626045](https://podcasts.apple.com/us/podcast/the-granddaddy-of-dids-did-btcr/id1568335990?i=1000529626045)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 05 02:51:56 +0000 2021](https://twitter.com/ChristopherA/status/1456454201899315205)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 05 02:51:56 +0000 2021](https://twitter.com/ChristopherA/status/1456454201899315205)
 
 ----
 
 > RT @Appelcline: Six years ago today, @ChristopherA brought the first of the @RWOTEvents to an end in San Francisco, CA. We would publish fi…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 05 06:18:51 +0000 2021](https://twitter.com/ChristopherA/status/1456506276595200003)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 05 06:18:51 +0000 2021](https://twitter.com/ChristopherA/status/1456506276595200003)
 
 ----
 
@@ -54,22 +60,22 @@ Replying to [@_prestwich](https://twitter.com/_prestwich/status/1457184445241257
 
 > Depends on your definition of L1. I’d say release of Chia approaches viable end of L1 tokens, but I suspect futures could include splitting L1 into L0 &amp; L1, L1s optimized for L2/L3, and wildcards like no-token L1s, homomorphic or quantum L1s &amp; lightspeed bound (Mars? Oort?) L1s.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 07 23:49:26 +0000 2021](https://twitter.com/ChristopherA/status/1457495437997318148)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 07 23:49:26 +0000 2021](https://twitter.com/ChristopherA/status/1457495437997318148)
 
 ----
 
 > RT @forrestbrazeal: it's the little things... 
 > 
-> ![](../../media/1457500067233865735-FDbwu_PXoAEleXX.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1457500067233865735-FDbwu_PXoAEleXX.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 08 00:07:49 +0000 2021](https://twitter.com/ChristopherA/status/1457500067233865735)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 08 00:07:49 +0000 2021](https://twitter.com/ChristopherA/status/1457500067233865735)
 
 ----
 
 > RT @FullyNoded: 2/20  
 > Thanks to @BlockchainComns a new standard called Uniform Resource (UR) was developed to make cross wallet compatibilit…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 09 04:42:43 +0000 2021](https://twitter.com/ChristopherA/status/1457931636239056898)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 09 04:42:43 +0000 2021](https://twitter.com/ChristopherA/status/1457931636239056898)
 
 ----
 
@@ -77,63 +83,57 @@ Replying to [@_prestwich](https://twitter.com/_prestwich/status/1457184445241257
 > airgapped UR QR codes with   
 > @bluewalletio @SeedSigner @FOUNDATIONdvcs @KeystoneWallet @CasaAppOfficial @SparrowWallet…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 09 04:42:46 +0000 2021](https://twitter.com/ChristopherA/status/1457931648561942536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 09 04:42:46 +0000 2021](https://twitter.com/ChristopherA/status/1457931648561942536)
 
 ----
 
 > RT @FullyNoded: 15/20  
 > A new UR QR code for exporting your wallet in the "Wallet Detail" view, this is ideal for exporting it to other walle…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 09 04:43:59 +0000 2021](https://twitter.com/ChristopherA/status/1457931954846789638)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 09 04:43:59 +0000 2021](https://twitter.com/ChristopherA/status/1457931954846789638)
 
 ----
 
 > RT @La__Cuen: My latest bitcoin article 👇🙂
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 10 23:21:31 +0000 2021](https://twitter.com/ChristopherA/status/1458575577384845313)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 10 23:21:31 +0000 2021](https://twitter.com/ChristopherA/status/1458575577384845313)
 
 ----
 
 > #QOTD: “Democracy is like water caught in the palm of our hands. If we do not focus on holding onto it, the water will drip away through our fingers, and we will be left with nothing but a burning thirst.” ⇒@MarinaNemat 👏 [https://www.cnn.com/2021/11/10/opinions/iran-social-rights-disappear-rapidly-nemat/index.html](https://www.cnn.com/2021/11/10/opinions/iran-social-rights-disappear-rapidly-nemat/index.html)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 11 02:18:25 +0000 2021](https://twitter.com/ChristopherA/status/1458620095043805188)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 11 02:18:25 +0000 2021](https://twitter.com/ChristopherA/status/1458620095043805188)
 
 ----
 
 > Apple promised us almost a year ago the option to disable signing certificate checks with Apple’s OCSP servers, a privacy risk when you install apps. Nothing so far in Monterey. Should have been fixed by now. [https://eclecticlight.co/2021/11/08/will-apple-honour-its-promises-on-ocsp-certificate-checks/](https://eclecticlight.co/2021/11/08/will-apple-honour-its-promises-on-ocsp-certificate-checks/) @howardnoakley
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 11 20:06:42 +0000 2021](https://twitter.com/ChristopherA/status/1458888936822956034)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 11 20:06:42 +0000 2021](https://twitter.com/ChristopherA/status/1458888936822956034)
 
 ----
 
 > Interesting! It looks like you can soon sign git commits with ssh too. Also pleased they have signature name spaces (similar to proof purpose in DIDs) – lack of this is a common flaw in a number other signature schemes. 🕵🏻‍♂️ [https://twitter.com/__agwa/status/1459194182459961346](https://twitter.com/__agwa/status/1459194182459961346)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 13 17:48:03 +0000 2021](https://twitter.com/ChristopherA/status/1459578822588731394)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 13 17:48:03 +0000 2021](https://twitter.com/ChristopherA/status/1459578822588731394)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1459578822588731394)
 
 > Also important to me is ssh is pre-installed in most systems today, so you don’t have to install anything to bootstrap file signing. This has always been a catch-22 when I’ve looked into securing a new system against install hijacking (e.g. curl | bash) &amp; supply-chain attacks.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 13 18:10:28 +0000 2021](https://twitter.com/ChristopherA/status/1459584462820311045)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 13 18:10:28 +0000 2021](https://twitter.com/ChristopherA/status/1459584462820311045)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1459584462820311045)
 
 > One of the concerns might be that GitHub is suggested for key distribution, but you instead use did:onion method (https://blockchaincommons.github.io/did-method-onion/ &amp; implemented at   
 > [https://github.com/BlockchainCommons/torgap-demo).](https://github.com/BlockchainCommons/torgap-demo)) /cc @__agwa
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 13 18:14:24 +0000 2021](https://twitter.com/ChristopherA/status/1459585452395024385)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 13 18:14:24 +0000 2021](https://twitter.com/ChristopherA/status/1459585452395024385)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1459585452395024385)
-
 > We have a solution for a “universal donor” 25519 key that can be transformed into both minisign &amp; tor keys (https://github.com/BlockchainCommons/torgap-sig &amp; [https://github.com/BlockchainCommons/torgap-sig-cli-rust).](https://github.com/BlockchainCommons/torgap-sig-cli-rust)) I’ll have to see if there are any issues with leveraging ssh keys as well.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 13 18:15:06 +0000 2021](https://twitter.com/ChristopherA/status/1459585629465939969)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 13 18:15:06 +0000 2021](https://twitter.com/ChristopherA/status/1459585629465939969)
 
 ----
 
@@ -141,7 +141,7 @@ Replying to [@damienmiller and @sebkinne](https://twitter.com/damienmiller/statu
 
 > [https://twitter.com/christophera/status/1459578822588731394](https://twitter.com/christophera/status/1459578822588731394)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 13 18:19:04 +0000 2021](https://twitter.com/ChristopherA/status/1459586628524003336)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 13 18:19:04 +0000 2021](https://twitter.com/ChristopherA/status/1459586628524003336)
 
 ----
 
@@ -149,7 +149,7 @@ Replying to [@damienmiller and @sebkinne](https://twitter.com/damienmiller/statu
 >   
 > The…
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 14 19:31:31 +0000 2021](https://twitter.com/ChristopherA/status/1459967248680976385)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 14 19:31:31 +0000 2021](https://twitter.com/ChristopherA/status/1459967248680976385)
 
 ----
 
@@ -157,59 +157,55 @@ Replying to [@damienmiller and @sebkinne](https://twitter.com/damienmiller/statu
 >   
 > The answer is: unless you're a wallet/protocol developer, probably nothing. Taking…
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 14 19:31:35 +0000 2021](https://twitter.com/ChristopherA/status/1459967265936330753)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 14 19:31:35 +0000 2021](https://twitter.com/ChristopherA/status/1459967265936330753)
 
 ----
 
 > I’ve been looking forward to the opportunities from Bitcoin Schnorr since it was first demonstrated by the Elements team at @Blockstream 6 years ago! You could say I’ve been waiting for it since I tried to get a patent license for it in 1999 when I was CTO at Certicom! 👏🙏 [https://twitter.com/pwuille/status/1459778730369368067](https://twitter.com/pwuille/status/1459778730369368067)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 14 19:42:55 +0000 2021](https://twitter.com/ChristopherA/status/1459970118515970048)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 14 19:42:55 +0000 2021](https://twitter.com/ChristopherA/status/1459970118515970048)
 
 ----
 
 > Great thread here hinting at some futures for Bitcoin Lightning now that the Taproot/Schnorr soft fork has activated. If you hadn’t noticed, the @BlockchainComns logo are borromean rings, chosen as I’ve been intrigued by ring signatures. [https://twitter.com/TheBlueMatt/status/1460081817609027595](https://twitter.com/TheBlueMatt/status/1460081817609027595)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 16 04:59:45 +0000 2021](https://twitter.com/ChristopherA/status/1460472636799012870)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 16 04:59:45 +0000 2021](https://twitter.com/ChristopherA/status/1460472636799012870)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1460472636799012870)
-
 > [https://en.wikipedia.org/wiki/Borromean_rings](https://en.wikipedia.org/wiki/Borromean_rings)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 16 04:59:56 +0000 2021](https://twitter.com/ChristopherA/status/1460472682508480512)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 16 04:59:56 +0000 2021](https://twitter.com/ChristopherA/status/1460472682508480512)
 
 ----
 
 > This is definitely true. 30 years ago with SSL &amp; choice of CAs we were trying to avoid the tyranny of a Microsoft “one ring rule them all”. Progress, only to find over time consolidation of CAs &amp; power of Google &amp; Facebook to re-centralize. Today’s tech too can be re-centralized. [https://twitter.com/ldodds/status/1458562522919936001](https://twitter.com/ldodds/status/1458562522919936001)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 16 05:14:29 +0000 2021](https://twitter.com/ChristopherA/status/1460476343598997505)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 16 05:14:29 +0000 2021](https://twitter.com/ChristopherA/status/1460476343598997505)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1460476343598997505)
-
 > I highly recommend the DID Method Rubric to see the difficulties in evaluating decentralization. My own hypothesis is that we will discover that, like Arrow’s Impossibility Theorem is for voting, that perfect decentralization is not possible. [https://www.w3.org/TR/did-rubric/](https://www.w3.org/TR/did-rubric/)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 16 05:18:08 +0000 2021](https://twitter.com/ChristopherA/status/1460477263347023873)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 16 05:18:08 +0000 2021](https://twitter.com/ChristopherA/status/1460477263347023873)
 
 ----
 
 > RT @ChristopherA: I highly recommend the DID Method Rubric to see the difficulties in evaluating decentralization. My own hypothesis is tha…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 16 05:19:17 +0000 2021](https://twitter.com/ChristopherA/status/1460477552389017602)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 16 05:19:17 +0000 2021](https://twitter.com/ChristopherA/status/1460477552389017602)
 
 ----
 
 > I see a lot of FUD about token-based identity systems. I agree that we still must be careful, but first you have to understand what people mean by token-based identity. It is NOT account-based identification. This article by @windley offers a good explanation of the difference. [https://twitter.com/windley/status/1453023857892159498](https://twitter.com/windley/status/1453023857892159498)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 17 01:34:31 +0000 2021](https://twitter.com/ChristopherA/status/1460783377636753412)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 17 01:34:31 +0000 2021](https://twitter.com/ChristopherA/status/1460783377636753412)
 
 ----
 
 > RT @BlockchainComns: We have released a minor bugfix version of Gordian Server. Want to run a Bitcoin Core server on your Mac computer? Gor…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 17 19:33:43 +0000 2021](https://twitter.com/ChristopherA/status/1461054964172660737)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 17 19:33:43 +0000 2021](https://twitter.com/ChristopherA/status/1461054964172660737)
 
 ----
 
@@ -217,7 +213,7 @@ Replying to [@Caralie_C, @AdoptingBTC, @ConorOkus, @glozow and @josibake](https:
 
 > There is now a Spanish translation of @BlockchainComns Learning Bitcoin from the Command Line, a free self-paced course with over 1.9K stars &amp; 500 forks. [https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/blob/spanish-translation/es/README.md](https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/blob/spanish-translation/es/README.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 17 20:13:03 +0000 2021](https://twitter.com/ChristopherA/status/1461064865976516608)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 17 20:13:03 +0000 2021](https://twitter.com/ChristopherA/status/1461064865976516608)
 
 ----
 
@@ -225,7 +221,7 @@ Replying to [@BTCPuertoRico and @SeedSigner](https://twitter.com/BTCPuertoRico/s
 
 > There is now a Spanish translation of @BlockchainComns Learning Bitcoin from the Command Line, a free self-paced course with over 1.9K stars &amp; 500 forks. [https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/blob/spanish-translation/es/README.md](https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/blob/spanish-translation/es/README.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 17 20:13:57 +0000 2021](https://twitter.com/ChristopherA/status/1461065088433999875)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 17 20:13:57 +0000 2021](https://twitter.com/ChristopherA/status/1461065088433999875)
 
 ----
 
@@ -233,7 +229,7 @@ Replying to [@camilacampton and @skwp](https://twitter.com/camilacampton/status/
 
 > There is now a Spanish translation of @BlockchainComns Learning Bitcoin from the Command Line, a free self-paced course with over 1.9K stars &amp; 500 forks. [https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/blob/spanish-translation/es/README.md](https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/blob/spanish-translation/es/README.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 17 20:14:33 +0000 2021](https://twitter.com/ChristopherA/status/1461065239596711940)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 17 20:14:33 +0000 2021](https://twitter.com/ChristopherA/status/1461065239596711940)
 
 ----
 
@@ -243,7 +239,7 @@ Replying to [@camilacampton and @skwp](https://twitter.com/camilacampton/status/
 >   
 > O original em ingl…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 18 22:53:31 +0000 2021](https://twitter.com/ChristopherA/status/1461467632675082243)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 18 22:53:31 +0000 2021](https://twitter.com/ChristopherA/status/1461467632675082243)
 
 ----
 
@@ -251,7 +247,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/1462029249448185860)
 
 > I’m not sure that this ‘simple’ explanation cuts it. The reality is these NFTs do not (or rarely) have any rights other than to transfer the token. What they are is a way to signal status &amp; membership. In fact, many have exclusive chat channels only available to holders.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 20 17:17:58 +0000 2021](https://twitter.com/ChristopherA/status/1462107968036503555)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 20 17:17:58 +0000 2021](https://twitter.com/ChristopherA/status/1462107968036503555)
 
 ----
 
@@ -259,7 +255,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/1462112123040014343)
 
 > I’m big on smart contracts to support rights (or ocaps). However, I think we do a disservice to not express that the main value of NFTs is to signal status (like designer clothes) or virtue with or membership in a group (I get to show that I’m a member + exclusive access to chat)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 20 17:39:22 +0000 2021](https://twitter.com/ChristopherA/status/1462113351043932170)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 20 17:39:22 +0000 2021](https://twitter.com/ChristopherA/status/1462113351043932170)
 
 ----
 
@@ -267,25 +263,25 @@ Replying to [@n1ckler, @EESAenAlemania and @UFGoficial](https://twitter.com/n1ck
 
 > There is now a Spanish (and Portuguese) translation of @BlockchainComns Learning Bitcoin from the Command Line (2nd edition), a free self-paced course with over 1.9K stars &amp; 500+ forks. Many got their start and jobs in our ecosystem from it. [https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/tree/master/es](https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/tree/master/es)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 20 18:56:09 +0000 2021](https://twitter.com/ChristopherA/status/1462132674529611779)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 20 18:56:09 +0000 2021](https://twitter.com/ChristopherA/status/1462132674529611779)
 
 ----
 
 > RT @kimdhamilton: The did:btcr method was developed by @ChristopherA , @danpape, the untaggable Ryan Grant, and myself to demonstrate DIDs…
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 05:08:27 +0000 2021](https://twitter.com/ChristopherA/status/1462649151439532032)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 05:08:27 +0000 2021](https://twitter.com/ChristopherA/status/1462649151439532032)
 
 ----
 
 > RT @kimdhamilton: Here's a webinar I did called DIDs Demystified that takes advantage of this [https://www.youtube.com/watch?v=SBesOFNlLoo](https://www.youtube.com/watch?v=SBesOFNlLoo)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 05:08:31 +0000 2021](https://twitter.com/ChristopherA/status/1462649168573317127)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 05:08:31 +0000 2021](https://twitter.com/ChristopherA/status/1462649168573317127)
 
 ----
 
 > This is excellent work exploring the complex nature of various cryptocurrency key scenarios. I've been exploring similar territory, though my SSKR work &amp; #SmartCustody 2.0 factors are different (risk of collusion by parties of shared interests, bitrot &amp; MTBT, non-heterogeneity). [https://twitter.com/ittayeyal/status/1462765738305990657](https://twitter.com/ittayeyal/status/1462765738305990657)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 20:57:05 +0000 2021](https://twitter.com/ChristopherA/status/1462887883862282245)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 20:57:05 +0000 2021](https://twitter.com/ChristopherA/status/1462887883862282245)
 
 ----
 
@@ -293,7 +289,7 @@ Replying to [@ittayeyal](https://twitter.com/ittayeyal/status/146276573830599065
 
 > [https://twitter.com/ChristopherA/status/1462887883862282245?s=20](https://twitter.com/ChristopherA/status/1462887883862282245?s=20)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 20:58:16 +0000 2021](https://twitter.com/ChristopherA/status/1462888183843098625)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 20:58:16 +0000 2021](https://twitter.com/ChristopherA/status/1462888183843098625)
 
 ----
 
@@ -301,37 +297,31 @@ Replying to [@ittayeyal, @shalev0s, @ZenGo and @shalev0s](https://twitter.com/it
 
 > — what would it take to get your tool up to 5 keys, so I can look through various 3 of 5 scenarios (which are quite popular)? I'm particularly also interested in 4 of 9 (or in my case, 2 of 3 of three 2 of 3s using SSKR or a bitcoin taproot/schnoor contract).
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 21:02:17 +0000 2021](https://twitter.com/ChristopherA/status/1462889191809847296)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 21:02:17 +0000 2021](https://twitter.com/ChristopherA/status/1462889191809847296)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1462887883862282245)
 
 > Here is an early draft of some work I'm doing to dive deeper into multisig scenarios: "Designing Multisig for Independence &amp; Resilience" [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Multisig.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Multisig.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 21:08:20 +0000 2021](https://twitter.com/ChristopherA/status/1462890717798297600)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 21:08:20 +0000 2021](https://twitter.com/ChristopherA/status/1462890717798297600)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1462890717798297600)
 
 > Another on "Designing SSKR Share Scenarios" which supported by our SSKR libraries and reference apps: [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/SSKR-Sharing.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/SSKR-Sharing.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 21:08:21 +0000 2021](https://twitter.com/ChristopherA/status/1462890719039737859)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 21:08:21 +0000 2021](https://twitter.com/ChristopherA/status/1462890719039737859)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1462890719039737859)
-
 > Finally, here there be dragons! "The Dangers of Secret-Sharing Schemes". More research coming as we work toward #SmartCustody 2.0. [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/SSKR-Dangers.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/SSKR-Dangers.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 22 21:09:54 +0000 2021](https://twitter.com/ChristopherA/status/1462891109265199104)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 22 21:09:54 +0000 2021](https://twitter.com/ChristopherA/status/1462891109265199104)
 
 ----
 
 > RT @ManningBooks: What does #SSI (Self Sovereign Identity) actually mean? Discover the roadmap for a future of personal sovereignty powered…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 23 07:37:19 +0000 2021](https://twitter.com/ChristopherA/status/1463049006519500800)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 23 07:37:19 +0000 2021](https://twitter.com/ChristopherA/status/1463049006519500800)
 
 ----
 
@@ -343,7 +333,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/146289071903
 >   
 > Code…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 25 20:41:11 +0000 2021](https://twitter.com/ChristopherA/status/1463971045946245124)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 25 20:41:11 +0000 2021](https://twitter.com/ChristopherA/status/1463971045946245124)
 
 ----
 
@@ -351,4 +341,4 @@ Replying to [@Melt_Dem](https://twitter.com/Melt_Dem/status/1464031651143561220)
 
 > The ultimate “how to lose friends” game is Diplomacy. As everyone starts off relatively equal, the only way to win is to cooperate effectively, then betray an ally. I wrote about it some in my book on cooperative games, but here is another article about it [https://link.medium.com/e1FYZUtpulb](https://link.medium.com/e1FYZUtpulb)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 26 04:04:12 +0000 2021](https://twitter.com/ChristopherA/status/1464082536510881793)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 26 04:04:12 +0000 2021](https://twitter.com/ChristopherA/status/1464082536510881793)
