--- a/_tweets-md/2021/2021-05-01-tweets.md
+++ b/_tweets-md/2021/2021-05-01-tweets.md
@@ -1,13 +1,19 @@
+---  
+title: "Social Media - May"
+date: "2021-05-31"
+time:  23:59:59 +0000
+---
+
 > RT @murchandamus: Announcement for Bitcoin Core 0.21.1 release:  
 > [https://bitcoincore.org/en/2021/05/01/release-0.21.1/](https://bitcoincore.org/en/2021/05/01/release-0.21.1/)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun May 02 05:07:10 +0000 2021](https://twitter.com/ChristopherA/status/1388721704294391808)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 02 05:07:10 +0000 2021](https://twitter.com/ChristopherA/status/1388721704294391808)
 
 ----
 
 > RT @achow101: Shoutout to @slush_pool  for mining the first block signaling for Taproot activation. They mined 0000000000000000000c5fc4ba69…
 
-<img src="../../media/tweet.ico" width="12" /> [Sun May 02 23:56:01 +0000 2021](https://twitter.com/ChristopherA/status/1389005788614578176)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 02 23:56:01 +0000 2021](https://twitter.com/ChristopherA/status/1389005788614578176)
 
 ----
 
@@ -15,7 +21,7 @@ Replying to [@bluewalletio](https://twitter.com/bluewalletio/status/138932726301
 
 > We (@BlockchainComns) are scheduled to start on an 2.0 update for QuickConnect QR and UR codes between mobile clients &amp; TorGap services. We’d love to see a common standard here for a variety of services. Help us get started? /cc @FullyNoded
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 04 01:26:51 +0000 2021](https://twitter.com/ChristopherA/status/1389391035059490818)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 04 01:26:51 +0000 2021](https://twitter.com/ChristopherA/status/1389391035059490818)
 
 ----
 
@@ -23,7 +29,7 @@ Replying to [@kimdhamilton, @Brent_Shambaugh, @JoeAndrieu, @emsconnell, @danpape
 
 > I do like the did:doge trick. Could be good for 0.2. But with Taproot/Schnorr possible soon now if Simple Trial passes MASF, then there are some good choices for a BTCR 1.0 that have the anti-correlation, censorship-resistance &amp;  confidentiality that I wanted that 0.1 never had.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 04 03:54:06 +0000 2021](https://twitter.com/ChristopherA/status/1389428093190692865)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 04 03:54:06 +0000 2021](https://twitter.com/ChristopherA/status/1389428093190692865)
 
 ----
 
@@ -31,7 +37,7 @@ Replying to [@WayneVaughan, @kimdhamilton, @Brent_Shambaugh, @JoeAndrieu, @emsco
 
 > Absolutely! Not just MAST &amp; Schnorr, but we can also leverage P2P cooperative techniques like coinjoin &amp; L2 (Lighting &amp; RGB style) to share and/or lower costs. Likely we’ll still be more more expensive than did:ion but much more private.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 04 05:28:39 +0000 2021](https://twitter.com/ChristopherA/status/1389451887137542145)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 04 05:28:39 +0000 2021](https://twitter.com/ChristopherA/status/1389451887137542145)
 
 ----
 
@@ -39,13 +45,13 @@ Replying to [@WayneVaughan, @kimdhamilton, @Brent_Shambaugh, @JoeAndrieu, @emsco
 >   
 > Want to make the most of your…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 04 19:42:14 +0000 2021](https://twitter.com/ChristopherA/status/1389666700262580224)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 04 19:42:14 +0000 2021](https://twitter.com/ChristopherA/status/1389666700262580224)
 
 ----
 
 > RT @CraigSilverman: Joining the chorus of media nerds who are devastated by this news. Nuzzel is hands down one of my most used apps. At th…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 05 03:36:03 +0000 2021](https://twitter.com/ChristopherA/status/1389785939208196101)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 05 03:36:03 +0000 2021](https://twitter.com/ChristopherA/status/1389785939208196101)
 
 ----
 
@@ -53,161 +59,135 @@ Replying to [@TheBlueMatt](https://twitter.com/TheBlueMatt/status/13900435883782
 
 > Most services have turned off free auto-CI features as people were abusing them to do token mining.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 05 22:29:03 +0000 2021](https://twitter.com/ChristopherA/status/1390071067176173568)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 05 22:29:03 +0000 2021](https://twitter.com/ChristopherA/status/1390071067176173568)
 
 ----
 
 > “Buffet and friends cannot see just how corrupt the world is around them. They do not see the water that they swim in, and are seemingly blind to the trillions of dollars of money laundered each year through the banking system” ⁦@gladstein⁩ of @hrf👍 [https://bitcoinmagazine.com/culture/check-your-financial-privilege](https://bitcoinmagazine.com/culture/check-your-financial-privilege)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 23:23:05 +0000 2021](https://twitter.com/ChristopherA/status/1392621380366004228)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 23:23:05 +0000 2021](https://twitter.com/ChristopherA/status/1392621380366004228)
 
 ----
 
 > RT @MartyBent: Despite what many privileged Western elites would like you to believe, Bitcoin is providing incredible utility to millions o…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 23:24:17 +0000 2021](https://twitter.com/ChristopherA/status/1392621681512894466)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 23:24:17 +0000 2021](https://twitter.com/ChristopherA/status/1392621681512894466)
 
 ----
 
 > As someone who thinks of himself as more of an older Gen X American than a Boomer, one thing we all had in common was same TV media refs. Even the Millennials knew Gilligan’s Island as there was little other choice. But younger gens have more choice, at price of loss of context. [https://twitter.com/ambernoelle/status/1392524585317412876](https://twitter.com/ambernoelle/status/1392524585317412876)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 05:09:23 +0000 2021](https://twitter.com/ChristopherA/status/1392708528209469440)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 05:09:23 +0000 2021](https://twitter.com/ChristopherA/status/1392708528209469440)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847323911184386)
 
 > Multisigs are very important because they allow individual users to reduce Single Points of Failure and Compromise. [3/14] [https://github.com/BlockchainCommons/Gordian/blob/master/Docs/Multisig.md](https://github.com/BlockchainCommons/Gordian/blob/master/Docs/Multisig.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:54 +0000 2021](https://twitter.com/ChristopherA/status/1392847324821409792)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:54 +0000 2021](https://twitter.com/ChristopherA/status/1392847324821409792)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847322904547328)
-
 > A lot of our focus is on responsible key management. We want to help wallet manufacturers to keep your crypto-keys secure and safe. So we talk about everything from good use of entropy (randomness) to adoption of multisigs and the use of airgaps. [2/14]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:54 +0000 2021](https://twitter.com/ChristopherA/status/1392847323911184386)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:54 +0000 2021](https://twitter.com/ChristopherA/status/1392847323911184386)
 
 ----
 
 > Blockchain Commons is working to advance the state of cryptocurrency wallets with interoperable specifications. We've got many different ongoing initiatives, so we recently produced a video to introduce them all. [1/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY](https://www.youtube.com/watch?v=RYgOFSdUqWY)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:54 +0000 2021](https://twitter.com/ChristopherA/status/1392847322904547328)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:54 +0000 2021](https://twitter.com/ChristopherA/status/1392847322904547328)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847328076189704)
 
 > The first is ByteWords. This is a way to encode binary data (such as cryptographic seeds) as easy-to-recognize, hard-to-confuse words. Bytewords are also well-integrated with QRs. [7/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY#t=16m21s](https://www.youtube.com/watch?v=RYgOFSdUqWY#t=16m21s)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847329003118603)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847329003118603)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847327040208898)
 
 > Besides talking about foundational concepts, we also spotlight a few major technologies in our video. [6/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY#t=16m13s](https://www.youtube.com/watch?v=RYgOFSdUqWY#t=16m13s)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847328076189704)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847328076189704)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847326012743680)
 
 > Other foundational technologies that we use include CBOR encoding, CRC-32, SHA-256, Shamir's Secret Sharing, and fountain codes. It's a lot! That's why we put together the video. [5/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY#t=7m14s](https://www.youtube.com/watch?v=RYgOFSdUqWY#t=7m14s)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847327040208898)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847327040208898)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847324821409792)
 
 > And airgaps are very important too, because they allow you to keep your keys separated from the network by a physical gap of air, which can be bridged using QR codes and cameras. [4/14]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847326012743680)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:55 +0000 2021](https://twitter.com/ChristopherA/status/1392847326012743680)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847332924821506)
 
 > "A Guide to Using URs for Key Material" demonstrates how to safely transmit seeds, HD Keys, and BIP-39 words. (There will be more UR docs to come!) [12/14] [https://github.com/BlockchainCommons/crypto-commons/blob/master/Docs/ur-2-keys.md](https://github.com/BlockchainCommons/crypto-commons/blob/master/Docs/ur-2-keys.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847334015307780)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847334015307780)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847332048183303)
 
 > We're also expanding our other docs to support developers interested in using our interoperable specifications. "URs: An Overview" looks at how URs are put together. [11/14] [https://github.com/BlockchainCommons/crypto-commons/blob/master/Docs/ur-1-overview.md](https://github.com/BlockchainCommons/crypto-commons/blob/master/Docs/ur-1-overview.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847332924821506)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847332924821506)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847331142238214)
 
 > We've got tons more on all of these concepts, foundational specs, and technologies in that video! Take a look! [10/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY](https://www.youtube.com/watch?v=RYgOFSdUqWY)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847332048183303)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847332048183303)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847330110365698)
 
 > The third is Lifehash. This is a graphic method for recognizing seeds, keys, and other digital objects. [9/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY#t=24m55s](https://www.youtube.com/watch?v=RYgOFSdUqWY#t=24m55s)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847331142238214)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847331142238214)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847329003118603)
 
 > The second is Uniform Resources (URs). This is self-describing data that we present as an interoperable spec for transmitting data. It uses ByteWords and CBOR. [8/14] [https://www.youtube.com/watch?v=RYgOFSdUqWY#t=19m58s](https://www.youtube.com/watch?v=RYgOFSdUqWY#t=19m58s)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847330110365698)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:56 +0000 2021](https://twitter.com/ChristopherA/status/1392847330110365698)
 
 ----
-
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847335089004547)
 
 > The more support we have, the more we can do, and the less we have, the less we can do. If you'd like to support our increased work, consider becoming a GitHub patron. [14/14] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:57 +0000 2021](https://twitter.com/ChristopherA/status/1392847336146046983)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:57 +0000 2021](https://twitter.com/ChristopherA/status/1392847336146046983)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1392847334015307780)
-
 > Much of this work has been done with our Airgapped Wallet Community, who is helping us to prioritize real-world uses of interoperable technologies. [13/14] [https://github.com/BlockchainCommons/Airgapped-Wallet-Community/discussions](https://github.com/BlockchainCommons/Airgapped-Wallet-Community/discussions)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 14:20:57 +0000 2021](https://twitter.com/ChristopherA/status/1392847335089004547)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 14:20:57 +0000 2021](https://twitter.com/ChristopherA/status/1392847335089004547)
 
 ----
 
 > New #Bitcoin soft fork signaling period started this morning Taproot Schnorr's Simple Trial. So far 60.4% blocks have signaled yes — a good start! But we still have to get to 90% for a full signaling period to get approval. (visualization from [https://taproot.watch)](https://taproot.watch)) 
 > 
-> ![](../../media/1392901610188115969-E1STPxtVcAAageL.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1392901610188115969-E1STPxtVcAAageL.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 17:56:37 +0000 2021](https://twitter.com/ChristopherA/status/1392901610188115969)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 17:56:37 +0000 2021](https://twitter.com/ChristopherA/status/1392901610188115969)
 
 ----
 
 > RT @craigraw: Some great innovation here - in particular UR as a format for sending PSBTs and key information over QR. Standards like this…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 19:22:54 +0000 2021](https://twitter.com/ChristopherA/status/1392923325546913792)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 19:22:54 +0000 2021](https://twitter.com/ChristopherA/status/1392923325546913792)
 
 ----
 
 > RT @MartyBent: Remove yourself from the noise in the markets and focus on the hard work being done to ensure Bitcoin is successful 100 year…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 14 01:12:26 +0000 2021](https://twitter.com/ChristopherA/status/1393011288016449536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 14 01:12:26 +0000 2021](https://twitter.com/ChristopherA/status/1393011288016449536)
 
 ----
 
 > RT @BlockchainComns: Today we posted a new video that provides an overview of the Blockchain Commons technologies. This blog post is full o…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 14 16:52:04 +0000 2021](https://twitter.com/ChristopherA/status/1393247753409425410)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 14 16:52:04 +0000 2021](https://twitter.com/ChristopherA/status/1393247753409425410)
 
 ----
 
@@ -217,66 +197,64 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/139284733401
 >   
 > Discover the roadmap for a future of person…
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 15 16:54:12 +0000 2021](https://twitter.com/ChristopherA/status/1393610677311315972)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 15 16:54:12 +0000 2021](https://twitter.com/ChristopherA/status/1393610677311315972)
 
 ----
 
 > RT @OracleRDiaz: Thank you @drummondreed @AlexPreukschat @ChristopherA and the team of long time identity expert who helped make this book…
 
-<img src="../../media/tweet.ico" width="12" /> [Mon May 17 17:58:22 +0000 2021](https://twitter.com/ChristopherA/status/1394351601683296256)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 17 17:58:22 +0000 2021](https://twitter.com/ChristopherA/status/1394351601683296256)
 
 ----
 
 > RT @WolfMcNally: I've been a research contributor to Blockchain Commons for several years now, and my most recent video for them is a tour…
 
-<img src="../../media/tweet.ico" width="12" /> [Mon May 17 17:58:30 +0000 2021](https://twitter.com/ChristopherA/status/1394351634050805761)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 17 17:58:30 +0000 2021](https://twitter.com/ChristopherA/status/1394351634050805761)
 
 ----
 
 > RT @SeedSigner: Great technical discussion that covers some of the security strategies used in SeedSigner and other airgapped multi-signatu…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 19 17:09:31 +0000 2021](https://twitter.com/ChristopherA/status/1395064086530969603)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 19 17:09:31 +0000 2021](https://twitter.com/ChristopherA/status/1395064086530969603)
 
 ----
 
 > Here is a link to the Google Translate of this page: “What are the digital rights that President Carlos Alvarado suggests ensuring in the Political Constitution? The debate on the protection of fundamental guarantees in the technological framework…” [https://hsq3z5y6crq45mhhh6uraehmpm-ac5fdsxevxq4s5y-elfinancierocr-com.translate.goog/tecnologia/que-son-los-derechos-digitales-que-el-presidente/GMHH5N7VLNHO5JCW6PTTAQSZ7A/story/](https://hsq3z5y6crq45mhhh6uraehmpm-ac5fdsxevxq4s5y-elfinancierocr-com.translate.goog/tecnologia/que-son-los-derechos-digitales-que-el-presidente/GMHH5N7VLNHO5JCW6PTTAQSZ7A/story/) [https://twitter.com/MiamiDAO/status/1395128098388127747](https://twitter.com/MiamiDAO/status/1395128098388127747)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 19 22:54:37 +0000 2021](https://twitter.com/ChristopherA/status/1395150932615200768)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 19 22:54:37 +0000 2021](https://twitter.com/ChristopherA/status/1395150932615200768)
 
 ----
 
 > I’m offering testimony this morning on the Wyoming’s “Select Committee on Blockchain, Financial Technology and Digital Innovation Technology” about blockchain education, Wyoming’s new DAO legislation. Live Stream at [https://youtu.be/F1HDgkoKxWk](https://youtu.be/F1HDgkoKxWk) Later today Digital Identity!
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 28 15:38:30 +0000 2021](https://twitter.com/ChristopherA/status/1398302668536172545)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 28 15:38:30 +0000 2021](https://twitter.com/ChristopherA/status/1398302668536172545)
 
 ----
 
 > The legal definition that I've liked best in the past for "blockchain" looks like it was 1st done in Vermont business records law. If Wyoming wants to make improvements on its current more digital assets focused version, this is a good place to start. cc/ @rothfuss  @JaredSOlsen [https://twitter.com/ChristopherA/status/748238367062659072](https://twitter.com/ChristopherA/status/748238367062659072)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 28 18:47:26 +0000 2021](https://twitter.com/ChristopherA/status/1398350219150983168)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 28 18:47:26 +0000 2021](https://twitter.com/ChristopherA/status/1398350219150983168)
 
 ----
 
 > I’m offering testimony this afternoon during Wyoming’s “Select Committee on Blockchain, Financial Technology and Digital Innovation Technology” about next steps after passing our legal definition of Digital Identity earlier this year. Updated live stream: [https://www.youtube.com/watch?v=ayQ086BVDXE](https://www.youtube.com/watch?v=ayQ086BVDXE)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 28 19:21:00 +0000 2021](https://twitter.com/ChristopherA/status/1398358663740366849)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 28 19:21:00 +0000 2021](https://twitter.com/ChristopherA/status/1398358663740366849)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1398358663740366849)
-
 > The final video of Wyoming digital identity session is at  [https://youtu.be/ayQ086BVDXE.](https://youtu.be/ayQ086BVDXE) I particularly appreciated Joel Revill’s remarks at 1h42m19s “there is a line that I didn’t quite appreciate before between self-sourced identity &amp; 3rd-party sourced identity…makes good sense.”
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 28 21:45:24 +0000 2021](https://twitter.com/ChristopherA/status/1398395003236278279)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 28 21:45:24 +0000 2021](https://twitter.com/ChristopherA/status/1398395003236278279)
 
 ----
 
 > RT @ChristopherA: The final video of Wyoming digital identity session is at  [https://youtu.be/ayQ086BVDXE.](https://youtu.be/ayQ086BVDXE) I particularly appreciated Joel Revil…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 28 21:45:29 +0000 2021](https://twitter.com/ChristopherA/status/1398395026678317056)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 28 21:45:29 +0000 2021](https://twitter.com/ChristopherA/status/1398395026678317056)
 
 ----
 
 > RT @NZN: Kudos to the work being led in #Wyoming to define properly the #DigitalIdentity that is sourced from people, versus 3rd parties us…
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 29 16:22:53 +0000 2021](https://twitter.com/ChristopherA/status/1398676228060565512)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 29 16:22:53 +0000 2021](https://twitter.com/ChristopherA/status/1398676228060565512)
